<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intent_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="love">Love you</string>
    <string name="im1descr">Click vào đây để xem thông tin</string>
    <string name="descluu">Click vào đây để lưu trữ</string>
    <string name="title_activity_second_">Second_Activity</string>
    <string name="sname">"Name "</string>
    <string name="nHint">Type your name</string>
    <string name="nHInt">Type your name</string>
    <string name="aview">Age</string>
    <string name="aHint">Type your age</string>
    <string name="mainGo">Go main</string>
    <string name="ThreeGo">Go 3</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="wfor">Work for</string>
    <string name="sLive">Live at</string>
    <string name="FourGo">Go 4</string>
    <string name="title_activity_four">FourActivity</string>
    <string name="osName">OS Phone</string>

</resources>
